// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/ATTRIBUTE.proto";
import "../ccsds_mal/BOOLEAN.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/USHORT.proto";
import "./ValidityState.proto";

package ccsds_mc.protobuf;

message ParameterValue {
extensions 9 to 109;

  optional ccsds_mal.protobuf.ATTRIBUTE convertedValue = 1;
  optional ccsds_mal.protobuf.ATTRIBUTE extractedValue = 2;
  optional ccsds_mal.protobuf.ATTRIBUTE rawValue = 3;
  optional ccsds_mal.protobuf.BOOLEAN isObsolete = 4;
  optional ccsds_mal.protobuf.USHORT triggerOnCounter = 5;
  optional ccsds_mal.protobuf.USHORT triggerOffCounter = 6;
  optional ccsds_mal.protobuf.STRING monitoringState = 7;
  optional ccsds_mc.protobuf.ValidityState validityState = 8;
}
